--- a/Book of Spells/MainWindow.xaml
+++ b/Book of Spells/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="Book_of_Spells.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Book_of_Spells"
+        xmlns:SavingThrows="clr-namespace:ToolLibrary.Dungeons.Proficiencies.SavingThrows;assembly=ToolLibrary" xmlns:Classes="clr-namespace:ToolLibrary.Dungeons.Mobs.Classes;assembly=ToolLibrary" x:Class="Book_of_Spells.MainWindow"
         mc:Ignorable="d"
         Title="Book of Spells" Height="492.159" Width="620.372">
     <Grid>
@@ -25,13 +26,26 @@
                                 <Label x:Name="descLabel" Content="Description" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top" Height="29" Width="76"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="TabItem">
+                        <TabItem Header="Classes">
                             <Grid Background="#FFE5E5E5">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
                                     <ColumnDefinition Width="0*"/>
                                 </Grid.ColumnDefinitions>
+                                <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="181" Margin="10,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="292"/>
+                                <ComboBox HorizontalAlignment="Left" Margin="340,54,0,0" VerticalAlignment="Top" Width="120"/>
+                                <DataGrid x:Name="dungeonClassesCheckboxDataGridList" HorizontalAlignment="Left" Height="144" Margin="22,34,0,0" VerticalAlignment="Top" Width="264" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding /ClassName, Mode=OneWay}">
+                                    <DataGrid.DataContext>
+                                        <Classes:DungeonClasses/>
+                                    </DataGrid.DataContext>
+                                </DataGrid>
                             </Grid>
+                        </TabItem>
+                        <TabItem Header="TabItem" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="72">
+                            <Grid Background="#FFE5E5E5"/>
+                        </TabItem>
+                        <TabItem Header="TabItem" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="72">
+                            <Grid Background="#FFE5E5E5"/>
                         </TabItem>
                     </TabControl>
                     <Label x:Name="spellName" Content="New Spell" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="29" Width="226"/>
