--- a/Book of Spells/MainWindow.xaml
+++ b/Book of Spells/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Book_of_Spells"
-        xmlns:SavingThrows="clr-namespace:ToolLibrary.Dungeons.Proficiencies.SavingThrows;assembly=ToolLibrary" xmlns:Classes="clr-namespace:ToolLibrary.Dungeons.Mobs.Classes;assembly=ToolLibrary" x:Class="Book_of_Spells.MainWindow"
+        xmlns:SavingThrows="clr-namespace:ToolLibrary.Dungeons.Proficiencies.SavingThrows;assembly=ToolLibrary" xmlns:Classes="clr-namespace:ToolLibrary.Dungeons.Mobs.Classes;assembly=ToolLibrary" xmlns:SpellSchools="clr-namespace:ToolLibrary.Dungeons.Spells.SpellSchools;assembly=ToolLibrary" x:Class="Book_of_Spells.MainWindow"
         mc:Ignorable="d"
         Title="Book of Spells" Height="492.159" Width="620.372">
     <Grid>
@@ -33,7 +33,11 @@
                                     <ColumnDefinition Width="0*"/>
                                 </Grid.ColumnDefinitions>
                                 <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="181" Margin="10,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="292"/>
-                                <ComboBox HorizontalAlignment="Left" Margin="340,54,0,0" VerticalAlignment="Top" Width="120"/>
+                                <ComboBox x:Name="spellSchoolDropdown" 
+                                          HorizontalAlignment="Left" 
+                                          Margin="340,54,0,0" 
+                                          VerticalAlignment="Top" 
+                                          Width="120"/>
                                 <DataGrid x:Name="dungeonClassesCheckboxDataGridList" HorizontalAlignment="Left" Height="144" Margin="22,34,0,0" VerticalAlignment="Top" Width="264" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding /ClassName, Mode=OneWay}">
                                     <DataGrid.DataContext>
                                         <Classes:DungeonClasses/>
