--- a/Book of Spells/MainWindow.xaml
+++ b/Book of Spells/MainWindow.xaml
@@ -16,7 +16,7 @@
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
             <TabItem x:Name="Spellcrafting" Header="Spellcrafting" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="82" Margin="-2,-2,-26,0">
-                <Grid Background="#FFE5E5E5" Height="337" VerticalAlignment="Top">
+                <Grid Background="#FFE5E5E5" Margin="0,0,0,2">
                     <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="62" Margin="263,14,0,0" Stroke="Black" VerticalAlignment="Top" Width="157"/>
                     <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="62" Margin="425,14,0,0" Stroke="Black" VerticalAlignment="Top" Width="157"/>
                     <TabControl x:Name="SpellcraftingTabControl" HorizontalAlignment="Left" Height="207" Margin="10,118,0,0" VerticalAlignment="Top" Width="576" TabStripPlacement="Left">
@@ -78,7 +78,7 @@
                         </TabItem>
                     </TabControl>
                     <Button Content="Next tab" HorizontalAlignment="Left" Margin="425,87,0,0" VerticalAlignment="Top" Width="75" Click="NextSpellcraftingTabControlTab"/>
-                    <Button Content="Prev tab" HorizontalAlignment="Left" Margin="505,87,0,0" VerticalAlignment="Top" Width="75" Click="PreviousSpellcraftingTabControlTab"/>
+                    <Button Content="Prev tab" HorizontalAlignment="Left" Margin="507,87,0,0" VerticalAlignment="Top" Width="75" Click="PreviousSpellcraftingTabControlTab"/>
                     <CheckBox x:Name="topVCheckbox" Content="V" HorizontalAlignment="Left" Margin="275,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
                     <CheckBox x:Name="topSCheckbox" Content="S" HorizontalAlignment="Left" Margin="325,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
                     <CheckBox x:Name="topMCheckbox" Content="M" HorizontalAlignment="Left" Margin="375,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
