--- a/Book of Spells/MainWindow.xaml
+++ b/Book of Spells/MainWindow.xaml
@@ -19,8 +19,8 @@
                 <Grid Background="#FFE5E5E5" Margin="0,0,0,2">
                     <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="62" Margin="263,14,0,0" Stroke="Black" VerticalAlignment="Top" Width="157"/>
                     <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="62" Margin="425,14,0,0" Stroke="Black" VerticalAlignment="Top" Width="157"/>
-                    <TabControl x:Name="SpellcraftingTabControl" HorizontalAlignment="Left" Height="207" Margin="10,118,0,0" VerticalAlignment="Top" Width="576" TabStripPlacement="Left">
-                        <TabItem x:Name="SpellDescTab" Header="Description">
+                    <TabControl x:Name="SpellcraftingTabControl" HorizontalAlignment="Left" Height="210" Margin="10,118,0,0" VerticalAlignment="Top" Width="576" TabStripPlacement="Left">
+                        <TabItem x:Name="SpellDescTab" Header="Description" Height="50">
                             <Grid Background="#FFE5E5E5">
                                 <TextBox x:Name="spellNameInput" HorizontalAlignment="Left" Height="23" Margin="91,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" LostFocus="spellNameInput_LostFocus"/>
                                 <TextBox x:Name="spellDescriptionInput" HorizontalAlignment="Left" Height="160" Margin="91,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" LostFocus="TextBox_LostFocus"/>
@@ -28,7 +28,7 @@
                                 <Label x:Name="descLabel" Content="Description" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top" Height="29" Width="76"/>
                             </Grid>
                         </TabItem>
-                        <TabItem x:Name="ClassesTab" Header="Classes">
+                        <TabItem x:Name="ClassesTab" Header="Classes" Height="50">
                             <Grid Background="#FFE5E5E5">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
@@ -41,36 +41,34 @@
                                         <Classes:DungeonClasses/>
                                     </DataGrid.DataContext>
                                 </DataGrid>
-                                <ComboBox x:Name="spellschoolCombo" HorizontalAlignment="Left" Margin="345,83,0,0" VerticalAlignment="Top" Width="120" IsEnabled="True" IsReadOnly="True" ShouldPreserveUserEnteredPrefix="False">
+                                <ComboBox x:Name="spellschoolCombo" HorizontalAlignment="Left" Margin="318,47,0,0" VerticalAlignment="Top" Width="145" IsEnabled="True" IsReadOnly="True" ShouldPreserveUserEnteredPrefix="False">
                                     <ComboBox.DataContext>
                                         <SpellSchools:SpellSchools Capacity="8"/>
                                     </ComboBox.DataContext>
                                 </ComboBox>
+                                <ComboBox HorizontalAlignment="Left" Margin="404,128,0,0" VerticalAlignment="Top" Width="82"/>
+                                <TextBox HorizontalAlignment="Left" Height="23" Margin="404,165,0,0" TextWrapping="Wrap" Text="Cast Time" VerticalAlignment="Top" Width="82" MaxLines="1"/>
+                                <Label x:Name="castLabel" Content="Casting" HorizontalAlignment="Left" Margin="414,94,0,0" VerticalAlignment="Top"/>
+                                <ComboBox HorizontalAlignment="Left" Margin="307,128,0,0" VerticalAlignment="Top" Width="83"/>
+                                <TextBox HorizontalAlignment="Left" Height="23" Margin="307,165,0,0" Text="Duration" VerticalAlignment="Top" Width="83" MaxLines="1"/>
+                                <Label x:Name="durLabel" Content="Duration" HorizontalAlignment="Left" Margin="318,94,0,0" VerticalAlignment="Top"/>
+                                <Label Content="Spell School" HorizontalAlignment="Left" Margin="357,21,0,0" VerticalAlignment="Top"/>
                             </Grid>
                         </TabItem>
-                        <TabItem x:Name="DurCastTab" Header="Dur&amp;Cast" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="72">
-                            <Grid Background="#FFE5E5E5">
-                                <ComboBox HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="120"/>
-                                <ComboBox HorizontalAlignment="Left" Margin="212,48,0,0" VerticalAlignment="Top" Width="120"/>
-                                <TextBox HorizontalAlignment="Left" Height="23" Margin="10,82,0,0" TextWrapping="Wrap" Text="Duration" VerticalAlignment="Top" Width="120"/>
-                                <TextBox HorizontalAlignment="Left" Height="23" Margin="212,82,0,0" TextWrapping="Wrap" Text="Cast Time" VerticalAlignment="Top" Width="120"/>
-                                <Label x:Name="durLabel" Content="Duration" HorizontalAlignment="Left" Margin="43,10,0,0" VerticalAlignment="Top"/>
-                                <Label x:Name="castLabel" Content="Casting" HorizontalAlignment="Left" Margin="253,10,0,0" VerticalAlignment="Top"/>
-                            </Grid>
-                        </TabItem>
-                        <TabItem x:Name="HigherLevelsTab" Header="Higher" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="72">
+                        <TabItem x:Name="HigherLevelsTab" Header="Higher" HorizontalAlignment="Left" Height="50" VerticalAlignment="Top" Width="72">
                             <Grid Background="#FFE5E5E5">
                                 <Label x:Name="higherLevelLabel" Content="Levels the Spell can be cast at" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                                <DataGrid HorizontalAlignment="Left" Height="150" Margin="10,41,0,0" VerticalAlignment="Top" Width="318"/>
-                                <TextBox x:Name="HigherLevelDescription" HorizontalAlignment="Left" Height="150" Margin="333,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="153" IsEnabled="False"/>
+                                <DataGrid HorizontalAlignment="Left" Height="150" Margin="10,41,0,0" VerticalAlignment="Top" Width="167"/>
+                                <TextBox x:Name="HigherLevelDescription" HorizontalAlignment="Left" Height="150" Margin="182,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304" IsEnabled="False"/>
+                                <Label x:Name="higherLevelLabel_Copy" Content="At higher level description" HorizontalAlignment="Left" Margin="258,10,0,0" VerticalAlignment="Top"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Comps" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="72">
+                        <TabItem Header="Comps" HorizontalAlignment="Left" Height="50" VerticalAlignment="Top" Width="72">
                             <Grid Background="#FFE5E5E5">
-                                <CheckBox x:Name="materialCheckbox" Content="Material" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue"/>
-                                <CheckBox x:Name="verbalCheckbox" Content="Verbal" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue"/>
-                                <CheckBox x:Name="somaticCheckbox" Content="Somatic" HorizontalAlignment="Left" Margin="10,43,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue" Width="63"/>
-                                <TextBox HorizontalAlignment="Left" Height="88" Margin="10,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="476" AutomationProperties.HelpText="Material component explanation goes here."/>
+                                <CheckBox x:Name="MaterialCheckbox" Content="Material" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue"/>
+                                <CheckBox x:Name="VerbalCheckbox" Content="Verbal" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue"/>
+                                <CheckBox x:Name="SomaticCheckbox" Content="Somatic" HorizontalAlignment="Left" Margin="10,43,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue" Width="63"/>
+                                <TextBox x:Name="MatTextbox" HorizontalAlignment="Left" Height="88" Margin="10,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="476" AutomationProperties.HelpText="Material component explanation goes here." IsEnabled="False" GotFocus="MatTextbox_GotFocus" KeyUp="MatTextbox_KeyUp"/>
                                 <TextBlock HorizontalAlignment="Left" Margin="112,12,0,0" TextWrapping="Wrap" Text="Verbal indicates whether the caster need free use of speech" VerticalAlignment="Top"/>
                                 <TextBlock HorizontalAlignment="Left" Margin="112,74,0,0" TextWrapping="Wrap" Text="Material components indicate whether the caster need specific items" VerticalAlignment="Top"/>
                                 <TextBlock HorizontalAlignment="Left" Margin="112,45,0,0" TextWrapping="Wrap" Text="Somatic indicates whether the caster needs free use of their arms" VerticalAlignment="Top"/>
@@ -79,9 +77,9 @@
                     </TabControl>
                     <Button Content="Next tab" HorizontalAlignment="Left" Margin="425,87,0,0" VerticalAlignment="Top" Width="75" Click="NextSpellcraftingTabControlTab"/>
                     <Button Content="Prev tab" HorizontalAlignment="Left" Margin="507,87,0,0" VerticalAlignment="Top" Width="75" Click="PreviousSpellcraftingTabControlTab"/>
-                    <CheckBox x:Name="topVCheckbox" Content="V" HorizontalAlignment="Left" Margin="275,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
-                    <CheckBox x:Name="topSCheckbox" Content="S" HorizontalAlignment="Left" Margin="325,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
-                    <CheckBox x:Name="topMCheckbox" Content="M" HorizontalAlignment="Left" Margin="375,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
+                    <CheckBox x:Name="TopVCheckbox" Content="V" HorizontalAlignment="Left" Margin="275,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
+                    <CheckBox x:Name="TopSCheckbox" Content="S" HorizontalAlignment="Left" Margin="325,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
+                    <CheckBox x:Name="TopMCheckbox" Content="M" HorizontalAlignment="Left" Margin="375,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
                     <Label Content="Duration:" HorizontalAlignment="Left" Margin="425,33,0,0" VerticalAlignment="Top"/>
                     <Label Content="Casting:" HorizontalAlignment="Left" Margin="425,49,0,0" VerticalAlignment="Top"/>
                     <Label Content="1 minute" HorizontalAlignment="Left" Margin="494,33,0,0" VerticalAlignment="Top"/>
