--- a/Book of Spells/MainWindow.xaml
+++ b/Book of Spells/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Book_of_Spells"
         xmlns:spellSchools="clr-namespace:ToolLibrary.Dungeons.Spells.SpellSchools;assembly=ToolLibrary"
         mc:Ignorable="d"
         Title="Book of Spells" Height="408.159" Width="620.372">
@@ -22,13 +21,13 @@
                     <TabControl x:Name="SpellcraftingTabControl" HorizontalAlignment="Left" Height="210" Margin="10,118,0,0" VerticalAlignment="Top" Width="576" TabStripPlacement="Left">
                         <TabItem x:Name="SpellDescTab" Header="Description" Height="50">
                             <Grid Background="#FFE5E5E5">
-                                <TextBox x:Name="spellNameInput" HorizontalAlignment="Left" Height="23" Margin="91,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" LostFocus="spellNameInput_LostFocus"/>
-                                <TextBox x:Name="spellDescriptionInput" HorizontalAlignment="Left" Height="160" Margin="91,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" LostFocus="TextBox_LostFocus"/>
+                                <TextBox x:Name="spellNameInput" HorizontalAlignment="Left" Height="23" Margin="91,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204"/>
+                                <TextBox x:Name="spellDescriptionInput" HorizontalAlignment="Left" Height="160" Margin="91,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204"/>
                                 <Label x:Name="nameLabel" Content="Spell Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="23" Width="76"/>
                                 <Label x:Name="descLabel" Content="Description" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top" Height="29" Width="76"/>
                             </Grid>
                         </TabItem>
-                        <TabItem x:Name="ClassesTab" Header="Racees" Height="50">
+                        <TabItem x:Name="ClassesTab" Header="Races" Height="50">
                             <Grid Background="#FFE5E5E5">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
@@ -64,9 +63,9 @@
                         </TabItem>
                         <TabItem Header="Comps" HorizontalAlignment="Left" Height="50" VerticalAlignment="Top" Width="72">
                             <Grid Background="#FFE5E5E5">
-                                <CheckBox x:Name="MaterialCheckbox" Content="Material" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue"/>
-                                <CheckBox x:Name="VerbalCheckbox" Content="Verbal" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue"/>
-                                <CheckBox x:Name="SomaticCheckbox" Content="Somatic" HorizontalAlignment="Left" Margin="10,43,0,0" VerticalAlignment="Top" Click="SetCorrespondingCheckboxValue" Width="63"/>
+                                <CheckBox x:Name="MaterialCheckbox" Content="Material" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top"/>
+                                <CheckBox x:Name="VerbalCheckbox" Content="Verbal" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                                <CheckBox x:Name="SomaticCheckbox" Content="Somatic" HorizontalAlignment="Left" Margin="10,43,0,0" VerticalAlignment="Top" Width="63"/>
                                 <TextBox x:Name="MatTextbox" HorizontalAlignment="Left" Height="88" Margin="10,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="476" AutomationProperties.HelpText="Material component explanation goes here." IsEnabled="False" GotFocus="MatTextbox_GotFocus" KeyUp="MatTextbox_KeyUp"/>
                                 <TextBlock HorizontalAlignment="Left" Margin="112,12,0,0" TextWrapping="Wrap" Text="Verbal indicates whether the caster need free use of speech" VerticalAlignment="Top"/>
                                 <TextBlock HorizontalAlignment="Left" Margin="112,74,0,0" TextWrapping="Wrap" Text="Material components indicate whether the caster need specific items" VerticalAlignment="Top"/>
@@ -74,8 +73,8 @@
                             </Grid>
                         </TabItem>
                     </TabControl>
-                    <Button Content="Next tab" HorizontalAlignment="Left" Margin="425,87,0,0" VerticalAlignment="Top" Width="75" Click="NextSpellcraftingTabControlTab"/>
-                    <Button Content="Prev tab" HorizontalAlignment="Left" Margin="507,87,0,0" VerticalAlignment="Top" Width="75" Click="PreviousSpellcraftingTabControlTab"/>
+                    <Button Content="Next tab" HorizontalAlignment="Left" Margin="425,87,0,0" VerticalAlignment="Top" Width="75"/>
+                    <Button Content="Prev tab" HorizontalAlignment="Left" Margin="507,87,0,0" VerticalAlignment="Top" Width="75"/>
                     <CheckBox x:Name="TopVCheckbox" Content="V" HorizontalAlignment="Left" Margin="275,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
                     <CheckBox x:Name="TopSCheckbox" Content="S" HorizontalAlignment="Left" Margin="325,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
                     <CheckBox x:Name="TopMCheckbox" Content="M" HorizontalAlignment="Left" Margin="375,48,0,0" VerticalAlignment="Top" Width="51" IsEnabled="False"/>
